added website content

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
           <li><a href="#">Backyard</a></li>
         </ul>
       </div>
+      <div class="website-content"></div>
+      <h1>DESIGNING LIFETIME</h1>
+      <p>
+        Dream it! let's make it happen, Beautiful design at your fingertips and
+        Transforming homes into beautiful spaces. JOIN US NOW!!
+      </p>
     </div>
   </body>
 </html>
