added a line break in a paragraph

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>DESIGNING LIFETIME</h1>
         <p>
           Dream it! let's make it happen, Beautiful design at your fingertips
-          and Transforming homes into beautiful spaces. JOIN US NOW!!
+          and Transforming homes into beautiful spaces. <br />JOIN US NOW!!
         </p>
       </div>
     </div>
