added 'MORE DESIGNS' and 'JOIN US !' buttonse

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
           Dream it! let's make it happen, Beautiful design at your fingertips
           and Transforming homes into beautiful spaces. <br />JOIN US NOW!!
         </p>
+        <div>
+          <button type="button">MORE DESIGNS</button>
+          <button type="button">JOIN US !</button>
+        </div>
       </div>
     </div>
   </body>
