--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           and Transforming homes into beautiful spaces. <br />JOIN US NOW!!
         </p>
         <div>
-          <button type="button">MORE DESIGNS</button>
-          <button type="button">JOIN US !</button>
+          <button type="button"><span></span>MORE DESIGNS</button>
+          <button type="button"><span></span>JOIN US !</button>
         </div>
       </div>
     </div>
